--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.modal-content {
+  border: none;
+}
+
+@media (max-width: 600px) {
+  .link {
+    width: 100%;
+  }
+}
