--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,13 @@
   font-family: Montserrat, sans-serif;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
 }
 
 code {
